--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <form name="form" class="form-horizontal" role="form" class="col-md-6" novalidate >
         <div  class="form-group ">
             <div class="col-md-1">
-                <label class="text-left" for="inputError1">П.І.П.</label>
+                <label class="text-left" for="inputHover">П.І.П.</label>
             </div>
             <div class="col-md-4">
                 <input type="text" ng-model="name" name="text" class="form-control" id="inputHover"  placeholder="Data" required/>
