--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Телефонна книга</title>
+    <title>Телефонна книгаp</title>
     <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <style type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+    <script type="text/javascript" src="jquery-1.7.2.min.js" ></script>
+    <script src="jquery.maskedinput.js" type="text/javascript"></script>
+        <style type="text/css">
         body{
             background-image: url(ava7.png);
         }
@@ -20,12 +22,15 @@
             padding-top: 20px;
             position: relative;
         }
-
         input[required].ng-pristine {
             border-color: #337AB7;
         }
+        input.ng-dirty {
+            border-color: #337AB7;
+        }
 
-        input.ng-invalid.ng-dirty{
+
+        input.ng-invalid{
             border-color: red;
         }
         input.ng-valid.ng-dirty{
@@ -33,14 +38,19 @@
         }
         form[novalidate] input {
             border-left-width: 8px;
-            border-color: #3498db;
+            border-color: #337AB7;
             border-style: solid;
         }
+
         #inputHover:hover{
-            background-color: lightgreen;
+            background-color: #36ee9d;
+        }
+        #phone:hover{
+            background-color: #36ee9d;
         }
 
     </style>
+
     <script type="text/javascript">
         var app = angular.module( 'app', [ ] )
                 .controller('contactlistCtrl', function( $scope ){    <!--задаємо контролер з назвою contactlistCtrl  -->
@@ -70,6 +80,7 @@
                             $scope.contactlist [id].name = $scope.name; <!-- замінюємо дані на ті що вводяться в інпути -->
                             $scope.contactlist [id].phone = $scope.phone;  <!--те саме для "phone"  -->
                             $scope.contactlist [id].email = $scope.email;
+
                             $scope.name = '';                <!-- обнулити поле введення після кліка по кнопці збереження змінених даних -->
                             $scope.phone = '';               <!-- після того як дані добавлені очищаємо input -->
                             $scope.email = '';
@@ -81,11 +92,17 @@
                         $scope.name = $scope.contactlist [id].name;
                         $scope.phone = $scope.contactlist [id].phone;
                         $scope.email = $scope.contactlist [id].email;
+
                     }
                     $scope.deletePerson = function( id ) {                 <!--функція кнопки "Видалити"  -->
                         $scope.contactlist .splice( id, 1 );               <!-- splice для видалення елементів масиву -->
+
                     }
+
                 })
+        jQuery(function($){
+            $("#phone").mask(" +380 (99) 999-99-99");
+        })
     </script>
 </head>
 <body ng-app="app" ng-controller="contactlistCtrl">
@@ -99,7 +116,7 @@
                 <label class="text-left" for="inputHover">П.І.П.</label>
             </div>
             <div class="col-md-4">
-                <input type="text" ng-model="name" name="text" class="form-control" id="inputHover"  placeholder="Data" required/>
+                <input type="text" ng-model="name" name="text" class="form-control" id="inputHover"  placeholder="Name" required/>
                 <span class="error" ng-show="form.text.$error.required">Required!</span>
             </div>
         </div>
@@ -109,7 +126,7 @@
                 <label class="text-left">№ телефону</label>
             </div>
             <div class="col-md-4">
-                <input type="number" ng-model="phone"  class="form-control" name="number"  id="inputHover" placeholder="Number"  required/>
+                <input type="text" ng-model="phone"  class="form-control" name="number"  id="phone" placeholder="Number" />
                 <span class="error" ng-show="form.number.$error.required">Required!</span>
                 <span class="error" ng-show="form.number.$error.number">Not valid number!</span>
             </div>
@@ -153,7 +170,7 @@
             <td>
                 <button class="btn btn-primary btn-xs" ng-click="editPerson($index)"><span class="glyphicon glyphicon-pencil"></span>
                     Ред-ти</button>
-                <button class="btn btn-primary btn-xs" ng-click="deletePerson($index)" ><span class="glyphicon glyphicon-trash"></span> Видалити</button>
+                <button class="btn btn-primary btn-xs" data-dismiss="modal" ng-click="deletePerson($index)" ><span class="glyphicon glyphicon-trash"></span> Видалити</button>
             </td>
         </tr>
         </tbody>
