--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="jquery-1.7.2.min.js" ></script>
     <script src="jquery.maskedinput.js" type="text/javascript"></script>
     <script type="text/javascript" src="bootstrap-modal.js" ></script>
-
+    <script type="text/javascript" src="bootstrap.min.js" ></script>
     <style type="text/css">
         body{
             background-image: url(ava7.png);
@@ -25,10 +25,10 @@
             position: relative;
         }
         input[required].ng-pristine {
-            border-color: #337AB7;
+            border-color: #66afe9;
         }
         input.ng-dirty {
-            border-color: #337AB7;
+            border-color: #66afe9;
         }
 
 
@@ -40,7 +40,7 @@
         }
         form[novalidate] input {
             border-left-width: 8px;
-            border-color: #337AB7;
+            border-color: #66afe9;
             border-style: solid;
         }
 
@@ -54,8 +54,8 @@
     </style>
 
     <script type="text/javascript">
-        var app = angular.module( 'app', [ ] )
-                .controller('contactlistCtrl', function( $scope ){    <!--задаємо контролер з назвою contactlistCtrl  -->
+        var app = angular.module( 'app', [] )
+                .controller('contactlistCtrl', function( $scope){    <!--задаємо контролер з назвою contactlistCtrl  -->
                     $scope.newPersonId = -1;           <!-- змінна яка буде показувати які дані зараз розміщені в формі, -1 нові дані -->
                     $scope.contactlist  = [                <!-- масив  -->
                         {                                  <!-- створюємо масив даних з даними абонента -->
@@ -63,6 +63,7 @@
                             phone: '+545-6546-5466',
                             email: 'Bill@gmail.com'
                         }
+
                     ];
                     $scope.addNewPerson = function() {    <!-- добавимо дані нових абонентів -->
                         if ( $scope.name != '' ) {        <!-- перевыряэмо що $scope не пустий  без цієї перевірки при натисненні на кнопку "Добавити" буде добавлятися пусте поле-->
@@ -99,13 +100,36 @@
                     $scope.deletePerson = function( id ) {                 <!--функція кнопки "Видалити"  -->
                         $scope.contactlist .splice( id, 1 );               <!-- splice для видалення елементів масиву -->
                         $scope.contactlist;
-                        $('#myModal').modal(options);
+
                     }
 
                 })
         jQuery(function($){
             $("#phone1").mask(" +380 (99) 999-99-99");
         })
+
+        app.directive('confirmClick', function ($window) {
+            var i = 0;
+            return {
+                restrict: 'A',
+                priority:  1,
+                compile: function (tElem, tAttrs) {
+                    var fn = '$$confirmClick' + i++,
+                            _ngClick = tAttrs.ngClick;
+                    tAttrs.ngClick = fn + '($event)';
+
+                    return function (scope, elem, attrs) {
+                        var confirmMsg = attrs.confirmClick || 'Are you sure?';
+
+                        scope[fn] = function (event) {
+                            if($window.confirm(confirmMsg)) {
+                                scope.$eval(_ngClick, {$event: event});
+                            }
+                        };
+                    };
+                }
+            };
+        });
     </script>
 </head>
 <body ng-app="app" ng-controller="contactlistCtrl">
@@ -173,15 +197,16 @@
             <td>
                 <button class="btn btn-primary btn-xs" ng-click="editPerson($index)"><span class="glyphicon glyphicon-pencil"></span>
                     Ред-ти</button>
-                <button class="btn btn-primary btn-xs" data-toggle="modal" data-target="#myModal" ng-click="deletePerson($index)" ><span class="glyphicon glyphicon-trash"></span> Видалити</button>
+                <button type="button" class="btn btn-danger btn-xs"  ng-click="deletePerson($index)"  confirm-click="Ви впевнені що хочете видалити цей контакт?">
+                    <span class="glyphicon glyphicon-trash"></span> Видалити</button>
             </td>
         </tr>
         </tbody>
     </table>
 
 </div>
-<!-- розмітка модального вікна-->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+<!-- розмітка модального вікна ui-bootstrap-->
+<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header"><button class="close" type="button" data-dismiss="modal">x</button>
@@ -194,7 +219,7 @@
                 <button class="btn btn-primary" type="button">Підтвердити</button></div>
         </div>
     </div>
-</div>
+</div>  -->
 
 </body>
 </html>
